resolve path to input
see CDR-473